Sqlite3: added a simple and uncomplete version of a sqlite3 extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ INCLUDE(CMake/Base.cmake)
 #SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)
 
 ADD_SUBDIRECTORY(Mysql)
+ADD_SUBDIRECTORY(Sqlite3)
 
