Sqlite3: prevented use of sqlite3 system include files by setting include path by hand

--- a/Sqlite3/CMakeLists.txt
+++ b/Sqlite3/CMakeLists.txt
@@ -36,6 +36,6 @@ SET(HEADERS
 SET(DEPENDENCIES
 )
 
-add_include(Externals/sqlite328)
+add_include(Externals)
 
 build_shared_lib(ObjectiveScriptSqlite3 oscript)
