--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,6 @@ INCLUDE(CMake/Base.cmake)
 #SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)
 
 ADD_SUBDIRECTORY(Mysql)
+ADD_SUBDIRECTORY(Pipe)
 ADD_SUBDIRECTORY(Sqlite3)
 
