--- a/trunk/Sqlite3/CMakeLists.txt
+++ b/trunk/Sqlite3/CMakeLists.txt
@@ -42,4 +42,4 @@ SET(MODULES
 
 add_include(Externals)
 
-build_shared_lib(ObjectiveScriptSqlite3 "${MODULES}")
+build_shared_lib(Sqlite3 "${MODULES}")
