ported apache library from ObjectiveScript main project renamed dynamic libraries to lib<Library> instead of libObjectiveScript<Library>

--- a/Sqlite3/CMakeLists.txt
+++ b/Sqlite3/CMakeLists.txt
@@ -42,4 +42,4 @@ SET(MODULES
 
 add_include(Externals)
 
-build_shared_lib(ObjectiveScriptSqlite3 "${MODULES}")
+build_shared_lib(Sqlite3 "${MODULES}")
