--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT(ObjectiveScript-Extensions)
+PROJECT(Slang-Extensions)
 
 cmake_minimum_required(VERSION 3.0)
 
@@ -18,6 +18,7 @@ INCLUDE(CMake/Base.cmake)
 #SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)
 
 ADD_SUBDIRECTORY(Apache)
+#ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
 ADD_SUBDIRECTORY(Mysql)
 ADD_SUBDIRECTORY(Pipe)
