--- a/MessageQueue/CMakeLists.txt
+++ b/MessageQueue/CMakeLists.txt
@@ -24,5 +24,5 @@ SET(MODULES
 
 add_include(Externals)
 
-build_shared_lib(MessageQueue "${MODULES}")
+build_shared_lib(ExtMessageQueue "${MODULES}")
 
