Curl: added a simple wrapper for libCurl
supported commands are:
curl_cleanup
curl_init
curl_perform
curl_read_result
curl_reset
curl_set_password
curl_set_progress
curl_set_url
curl_set_username
curl_set_verbose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ INCLUDE(CMake/Base.cmake)
 #SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)
 
 ADD_SUBDIRECTORY(Apache)
+ADD_SUBDIRECTORY(Curl)
 #ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
 ADD_SUBDIRECTORY(Mysql)
