Curl extension: - added methods curl_set_opt_int and curl_set_opt_str to add arbitrary options for curl library that are not supported directly by this extension

--- a/Curl/CMakeLists.txt
+++ b/Curl/CMakeLists.txt
@@ -13,6 +13,8 @@ SET(HEADERS
     CurlPerform.h
     CurlReadResult.h
     CurlReset.h
+    CurlSetOptInt.h
+    CurlSetOptStr.h
     CurlSetPassword.h
     CurlSetProgress.h
     CurlSetUrl.h
