libCurl: added methods curl_set_bearer, curl_set_header

--- a/Curl/CMakeLists.txt
+++ b/Curl/CMakeLists.txt
@@ -13,6 +13,8 @@ SET(HEADERS
     CurlPerform.h
     CurlReadResult.h
     CurlReset.h
+    CurlSetBearer.h
+    CurlSetHeader.h
     CurlSetOptInt.h
     CurlSetOptStr.h
     CurlSetPassword.h
