activated building of JSON extension since it has been excluded from the Slang programming language

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ INCLUDE(CMake/Base.cmake)
 
 ADD_SUBDIRECTORY(Apache)
 ADD_SUBDIRECTORY(Curl)
-#ADD_SUBDIRECTORY(JSON)
+ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
 ADD_SUBDIRECTORY(Mysql)
 ADD_SUBDIRECTORY(Pipe)
