created a MariaDB extension based on version 0.4.1 of the MySQL extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ ADD_SUBDIRECTORY(Apache)
 ADD_SUBDIRECTORY(Curl)
 ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
-ADD_SUBDIRECTORY(Mysql)
+ADD_SUBDIRECTORY(MariaDB)
+#ADD_SUBDIRECTORY(Mysql)
 ADD_SUBDIRECTORY(Pipe)
 ADD_SUBDIRECTORY(Sqlite3)
 
