--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_SUBDIRECTORY(Curl)
 ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
 ADD_SUBDIRECTORY(MariaDB)
-#ADD_SUBDIRECTORY(Mysql)
+ADD_SUBDIRECTORY(Mysql)
 ADD_SUBDIRECTORY(Pipe)
 ADD_SUBDIRECTORY(Sqlite3)
 
