--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,18 +11,17 @@ endif()
 # verbose makefiles
 #SET(CMAKE_VERBOSE_MAKEFILE ON)
 
-#INCLUDE(${PROJECT_SOURCE_DIR}/CMake/Base.cmake)
-INCLUDE(CMake/Base.cmake)
-
 # this helps debugging dependencies - a lot :)
 #SET_PROPERTY(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)
 
+INCLUDE(CMake/Base.cmake)
+
 ADD_SUBDIRECTORY(Apache)
-ADD_SUBDIRECTORY(Curl)
+#ADD_SUBDIRECTORY(Curl)		# extension has been moved to a separate repository
 ADD_SUBDIRECTORY(JSON)
 ADD_SUBDIRECTORY(MessageQueue)
-ADD_SUBDIRECTORY(MariaDB)
-ADD_SUBDIRECTORY(Mysql)
+#ADD_SUBDIRECTORY(MariaDB)	# extension has been moved to a separate repository
+#ADD_SUBDIRECTORY(Mysql)	# extension has been moved to a separate repository
 ADD_SUBDIRECTORY(Pipe)
-ADD_SUBDIRECTORY(Sqlite3)
+#ADD_SUBDIRECTORY(Sqlite3)	# extension has been moved to a separate repository
 
