--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # IDE stuff
 .idea
 .vscode
-build
 cmake-build-debug
 
 # generated stuff
+Bundle/man/*.gz
+Bundle/debian/.debhelper
+Bundle/debian/debhelper-build-stamp
+Bundle/debian/files
+Bundle/debian/slang-slang/
 CMake/Dependencies.cmake
-
